--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue": "^0.1.4",
     "laravel-elixir-webpack-official": "^1.0.2",
+    "materialize-css": "^0.97.7",
+    "node-sass": "^4.5.3",
     "vue": "^1.0.26",
     "vue-resource": "^1.0.3",
-    "vue-router": "^0.7.13",
-    "materialize-css": "^0.97.7"
+    "vue-router": "^0.7.13"
   }
 }
