--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "node-sass": "^4.5.3",
     "vue": "^1.0.26",
     "vue-resource": "^1.0.3",
-    "vue-router": "^0.7.13"
+    "vue-router": "^0.7.13",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
   }
 }
